// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description renders correctly 1`] = `
<DocumentFragment>
  .cache-8c6su2-BareDescription {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-xf88sk-Term {
  font-weight: 500;
  color: #151a2d;
  display: inline-block;
}

.cache-xf88sk-Term:after {
  content: ':';
}

.cache-ivr5h7-Desc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  margin: 8px 0 0 0;
}

<dl
    class="cache-8c6su2-BareDescription eu9mc5y0"
  >
    <dt
      class="cache-xf88sk-Term eu9mc5y2"
    >
      Name
    </dt>
    <dd
      class="cache-ivr5h7-Desc eu9mc5y1"
    >
      Big instance
    </dd>
    <dt
      class="cache-xf88sk-Term eu9mc5y2"
    >
      Size
    </dt>
    <dd
      class="cache-ivr5h7-Desc eu9mc5y1"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly inline 1`] = `
<DocumentFragment>
  .cache-13t0gak-BareDescription-BareDescription {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-13t0gak-BareDescription-BareDescription .eu9mc5y1 {
  margin: 0 0 0 8px;
}

.cache-xf88sk-Term {
  font-weight: 500;
  color: #151a2d;
  display: inline-block;
}

.cache-xf88sk-Term:after {
  content: ':';
}

.cache-ivr5h7-Desc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  margin: 8px 0 0 0;
}

<dl
    class="cache-13t0gak-BareDescription-BareDescription eu9mc5y0"
  >
    <dt
      class="cache-xf88sk-Term eu9mc5y2"
    >
      Name
    </dt>
    <dd
      class="cache-ivr5h7-Desc eu9mc5y1"
    >
      Big instance
    </dd>
    <dt
      class="cache-xf88sk-Term eu9mc5y2"
    >
      Size
    </dt>
    <dd
      class="cache-ivr5h7-Desc eu9mc5y1"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly seletable 1`] = `
<DocumentFragment>
  .cache-1y4pgcv-BareDescription-BareDescription-BareDescription {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1y4pgcv-BareDescription-BareDescription-BareDescription .eu9mc5y1 {
  margin: 0 0 0 8px;
}

.cache-1y4pgcv-BareDescription-BareDescription-BareDescription .eu9mc5y1 {
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

.cache-1y4pgcv-BareDescription-BareDescription-BareDescription .eu9mc5y1::selection {
  color: #ffffff;
  background: #4f0599;
}

.cache-xf88sk-Term {
  font-weight: 500;
  color: #151a2d;
  display: inline-block;
}

.cache-xf88sk-Term:after {
  content: ':';
}

.cache-ivr5h7-Desc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  margin: 8px 0 0 0;
}

<dl
    class="cache-1y4pgcv-BareDescription-BareDescription-BareDescription eu9mc5y0"
  >
    <dt
      class="cache-xf88sk-Term eu9mc5y2"
    >
      Name
    </dt>
    <dd
      class="cache-ivr5h7-Desc eu9mc5y1"
    >
      Big instance
    </dd>
    <dt
      class="cache-xf88sk-Term eu9mc5y2"
    >
      Size
    </dt>
    <dd
      class="cache-ivr5h7-Desc eu9mc5y1"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;
